Housekeeping: added comments and attributions, removed test prints, refactored for readability.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Bulma Docs referenced: https://bulma.io/documentation/start/overview/ and https://bulma.io/documentation/layout/hero/. -->
+
 <!doctype html>
 <html lang="en">
   <head>
