added page footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Student Email:        20095949@mydbs.ie
 GitHub Repo:          https://github.com/20095949-mateus-campos/programming-ca2
 -->
 
-<!-- Bulma Docs referenced: https://bulma.io/documentation/start/overview/ and https://bulma.io/documentation/layout/hero/. -->
+<!-- Bulma Docs referenced: https://bulma.io/documentation/start/overview/, https://bulma.io/documentation/layout/hero/ and https://bulma.io/documentation/layout/footer/. -->
 
 <!doctype html>
 <html lang="en">
@@ -28,5 +28,14 @@ GitHub Repo:          https://github.com/20095949-mateus-campos/programming-ca2
       <div id="root"></div>
       <script type="module" src="/src/main.jsx"></script>
     </section>
+    <footer class="footer has-background-dark" style="padding-top: 0; padding-bottom: 50px;">
+      <div class="content has-text-centered has-text-white">
+        <p>
+          Industrial ERP Information System by <a href="https://github.com/20095949-mateus-campos" target="_blank">Mateus Campos</a> (Student ID 20095949)<br>
+          <a href="https://www.dbs.ie/" target="_blank">Dublin Business School</a> | Dublin, Ireland | 2025<br>
+          <a href="https://github.com/20095949-mateus-campos/programming-ca2" target="_blank">GitHub</a> | <a href="https://drive.google.com/file/d/1tqexqIpDwm9ACGYIC7TX1l8d7fLaCYLU/view?usp=sharing" target="_blank">Documentation</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
